--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
 
         minSdk 24
         targetSdk 34
-        versionCode 10
-        versionName "10.0"
+        versionCode 11
+        versionName "11.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -48,12 +48,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
 
-    implementation 'com.google.android.gms:play-services-ads:22.5.0'
+    implementation 'com.google.android.gms:play-services-ads:22.6.0'
     implementation 'com.facebook.android:audience-network-sdk:6.16.0'
     implementation 'com.google.ads.mediation:facebook:6.16.0.0'
     implementation 'com.google.android.ads:mediation-test-suite:3.0.0'
+    implementation 'com.google.android.play:app-update:2.1.0'
 
 
 
@@ -61,10 +62,10 @@ dependencies {
 
 
     implementation 'com.google.firebase:firebase-database:20.3.0'
-    implementation 'com.google.firebase:firebase-messaging:23.3.1'
+    implementation 'com.google.firebase:firebase-messaging:23.4.0'
     implementation 'com.google.firebase:firebase-auth:22.3.0'
     implementation 'com.google.firebase:firebase-analytics:21.5.0'
-    implementation 'com.google.firebase:firebase-firestore:24.9.1'
+    implementation 'com.google.firebase:firebase-firestore:24.10.0'
     implementation 'com.google.firebase:firebase-storage:20.3.0'
     implementation 'com.google.firebase:firebase-ml-natural-language:22.0.0'
     implementation 'com.google.firebase:firebase-ml-natural-language-smart-reply-model:20.0.7'
@@ -74,8 +75,6 @@ dependencies {
     // Lottie Animation
     implementation "com.airbnb.android:lottie:5.0.3"
 
-    //In app Review
-    implementation "com.google.android.play:core:1.10.3"
 
 
     //Volley Library
